OLET1605 blog post

--- a/blogposts.html
+++ b/blogposts.html
@@ -9,7 +9,7 @@
 
 
 <body>
-    <div id="header"><h1>Mathematical Musings (not as sweet as M&Ms unfotunatley)</h1></div>
+    <div id="header"><h1>Mathematical Musings</h1></div>
     
     <div id="sidebar">
         <a href="index.html"><div id = "interests" class="sidebar-item">Home</div></a>
@@ -20,13 +20,17 @@
     <div id="main">
         <h1>Posts</h1>
         <ul>
-            <li> To come soon! </li>
+            <li>
+                <a href="articles/graph_theory_article.html">
+                    Graphically Grasping and Open Problem in Mathematics; OLET1605 Science Communication assignment
+                </a>
+            </li>
 
         </ul>
     </div>
 
 
     <div id="footer">
-        <h3>This is still a work in progress!</h3>
+        <h3>This is a perpetual work in progress!</h3>
     </div>
 </body>
