end of year updates, added list of visited countries

--- a/blogposts.html
+++ b/blogposts.html
@@ -13,7 +13,7 @@
     
     <div id="sidebar">
         <a href="index.html"><div id = "interests" class="sidebar-item">Home</div></a>
-        <a href="interests.html"><div id = "interests" class="sidebar-item">Stuff I find neat</div></a>
+        <a href="about.html"><div id = "interests" class="sidebar-item">About</div></a>
         <a href="blogposts.html"><div id = "interests" class="sidebar-item">Mathematical musings</div></a>
     </div>
 
