--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     
     <div id="sidebar">
         <a href="index.html"><div id = "interests" class="sidebar-item">Home</div></a>
-        <a href="interests.html"><div id = "interests" class="sidebar-item">Stuff I find neat</div></a>
+        <a href="about.html"><div id = "interests" class="sidebar-item">About</div></a>
         <a href="blogposts.html"><div id = "interests" class="sidebar-item">Mathematical musings</div></a>
     </div>
 
     <div id="main">
         <p>Hello hello! I am Albert Stark, this is my website.</p>
 
-        <p>I am an Undergraduate student of Mathematics at the University of Sydney.</p>
+        <p>I am third year Undergraduate student of Mathematics at the University of Sydney.</p>
 
-        <p>Outside of maths, I like doing Judo (which I picked up this year), and climbing (which I started when I was about 9). <br>
-        I also like solving/writing puzzles (I am both the Secretary and Editor-in-Chief (head writer) of the Usyd PuzzleSoc), reading, recreational programming and, if I have time, singing.
+        <p>Outside of maths, I like doing Judo and climbing. <br>
+        I also like solving/writing puzzles and am the Secretary of USYD PuzzleSoc (formerly head writer), reading, recreational programming and, if I have time, singing.
         </p>
 
         <h4>Links to elsewhere</h4>
