editing about page

--- a/about.html
+++ b/about.html
@@ -19,6 +19,11 @@
 
 
     <div id="main">
+	<h2>Contact</h2>
+	If you want to contact me, then the best way is by email,
+	<br><br>
+	<img src="general_assets/email.jpg" width="500">
+
 	<h2>Places I've Been</h2>
 	Dashes indicate period of residency, some of these years are fuzzy
 	<ul>
@@ -33,6 +38,15 @@
 		<li> 🇺🇸 : 2019</li>
 		<li> 🇯🇵  : 2023  </li>
 		<li> 🇵🇱 : 2023, 2025 </li>
+	</ul>
+
+	<h2>Languages</h2>
+	<ul>
+		<li>English (Native)</li>
+		<li>Japanese (~N3 ish)</li>
+		<li>French (Pretty rusty)</li>
+		<li>Latin (<i>Very</i> rusty)</li>
+		<li>Many others at varying levels of reading only, conversation only, mix of either etc.</li>
 
 	</ul>
 
@@ -52,7 +66,8 @@
         	<li>Circular arguments and/or Contradictions</li>
 	        <li>Running out of ink / paper</li>
         	<li>Practicing Kanji</li>
-	        <li>Long flights (Over the set of possible flights, sadly I am forced to approach a duration maximum relativley regularly)</li>
+		<li><s>Web design</s> </li>
+	        <li>Long flights</li>
         	<li>Cancellations (in plans)</li>
         </ul>
 
