--- a/about.html
+++ b/about.html
@@ -19,6 +19,12 @@
 
 
     <div id="main">
+
+	<h2>General</h2>
+
+	My CV can be found <a href="https://github.com/Albert10032/CV/blob/main/ascv.pdf"><b>here</b></a>.<br>
+	I have an interest in all things mathematical, but particularly areas of computational mathematics, ranging from number theory to simulation.
+
 	<h2>Contact</h2>
 	If you want to contact me, then the best way is by email,
 	<br><br>
