include profile photo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div id="main">
         <p>Hello hello! I am Albert Stark, this is my website.</p>
 
+	<img src="general_assets/IMG20240629103749.jpg" style="float:right;width:35%">
+
         <p>I am third year Undergraduate student of Mathematics at the University of Sydney.</p>
 
         <p>Outside of maths, I like doing Judo and climbing. <br>
