update background, and using submodule for CV

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 	<h2>General</h2>
 
-	My CV can be found <a href="https://github.com/Albert10032/CV/blob/main/ascv.pdf"><b>here</b></a>.<br>
+	My CV can be found <a href="CV/ascv.pdf"><b>here</b></a>.<br>
 	I have an interest in all things mathematical, but particularly areas of computational mathematics, ranging from number theory to simulation.
 
 	<h2>Contact</h2>
