push linkfarm to public

--- a/about.html
+++ b/about.html
@@ -14,16 +14,18 @@
      <div id="sidebar">
         <a href="index.html"><div id = "interests" class="sidebar-item">Home</div></a>
 	<a href="about.html"><div id = "interests" class="sidebar-item">About</div></a>
+        <a href="linkfarm.html"><div id = "interests" class="sidebar-item">Link farm</div></a>
         <a href="blogposts.html"><div id = "interests" class="sidebar-item">Mathematical musings</div></a>
     </div>
 
-
     <div id="main">
-
 	<h2>General</h2>
-
 	My CV can be found <a href="CV/ascv.pdf"><b>here</b></a>.<br>
 	I have an interest in all things mathematical, but particularly areas of computational mathematics, ranging from number theory to simulation.
+
+	<h2>Currently</h2>
+	It is currently the summer holidays here in Australia.<br>
+	I am doing a project under <a href="https://jvoight.github.io/">Professor John Voight</a> for the next semester on computational algebra, with a focus on algorithms for the finding of primitive roots. This is being done in <a href="https://magma.maths.usyd.edu.au/magma/">MAGMA</a>.
 
 	<h2>Contact</h2>
 	If you want to contact me, then the best way is by email,
@@ -31,18 +33,19 @@
 	<img src="general_assets/email.jpg" width="500">
 
 	<h2>Places I've Been</h2>
-	Dashes indicate period of residency, some of these years are fuzzy
+	Sorted in order of first visit, dashes indicate period of residency, some of these years are fuzzy
 	<ul>
 		<li> 🇬🇧 : 2005 - 2023, 2025</li>
 		<li> 🇮🇹 : 2005, 2009, 2016, 2018</li>
 		<li> 🇦🇺 : 2008, 2010, 2012, 2014, 2019, 2022, 2024-</li>
-		<li>  🇫🇷  : 2012, 2013, 2015, 2016 </li>
+		<li> 🇬🇷 : 2011 </li>
+		<li> 🇫🇷 : 2012, 2013, 2015, 2016 </li>
 		<li> 🇸🇬 : 2014 </li>
 		<li> 🇵🇹 : 2017 </li>
 		<li> 🇦🇹 : 2018 </li>
-		<li>  🇪🇸 : 2018, 2023</li>
+		<li> 🇪🇸 : 2018, 2023</li>
 		<li> 🇺🇸 : 2019</li>
-		<li> 🇯🇵  : 2023  </li>
+		<li> 🇯🇵 : 2023  </li>
 		<li> 🇵🇱 : 2023, 2025 </li>
 	</ul>
 
@@ -56,7 +59,6 @@
 
 	</ul>
 
-
         <h2>Likes</h2>
         <ul>
 		<li>Maths</li>
@@ -67,7 +69,8 @@
         	<li>Planes (Jaguar, Tornado, A330)</li>
 		<li>Cancellations (in calculations)</li>
         </ul>
-        <h2>Dislikes</h2>
+
+	<h2>Dislikes</h2>
         <ul>
         	<li>Circular arguments and/or Contradictions</li>
 	        <li>Running out of ink / paper</li>
@@ -75,22 +78,6 @@
 		<li><s>Web design</s> </li>
 	        <li>Long flights</li>
         	<li>Cancellations (in plans)</li>
-        </ul>
-
-        <h2>Recommendations for books / reading / listening</h2>
-        <ul>
-            <li>Mathsy stuff</li>
-                <ul>
-                    <li>Proofs from THE BOOK (Aigner, Ziegler) ISBN:978-3-662-57264-1</li>
-                    <li><a href="https://terrytao.wordpress.com/">Terrence Tao's blog</a> (also available as an RSS feed if you want that)</li>
-                    <li>How to solve it (Polya) ISBN:978-0-691-02356-5</li>
-                </ul>
-            <li>Literature</li>
-                <ul>
-                    <li>Anything by Tolkien</li>
-                    <li>Essay on Criticism (Alexander Pope)</li>
-                    <li>Emily Dickinson's poetry</li>
-                </ul>            
         </ul>
         
         <img src="general_assets/IMG20250324195012.jpg" width="600">
