--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="sidebar">
         <a href="index.html"><div id = "interests" class="sidebar-item">Home</div></a>
         <a href="about.html"><div id = "interests" class="sidebar-item">About</div></a>
-        <a href="blogposts.html"><div id = "interests" class="sidebar-item">Mathematical musings</div></a>
+	 <a href="linkfarm.html"><div id = "interests" class="sidebar-item">Link farm</div></a>
+	<a href="blogposts.html"><div id = "interests" class="sidebar-item">Mathematical musings</div></a>
     </div>
 
     <div id="main">
